Testing out stenlyk's fix for last column misalignment

--- a/stylesheets/grid.css
+++ b/stylesheets/grid.css
@@ -16,6 +16,7 @@
 	
 	.column, .columns { margin-left: 4.4%; float: left; min-height: 1px; position: relative; }
 	.column:first-child, .columns:first-child { margin-left: 0; }
+	.column:last-child, .columns:last-child { float: right; }
 	
 	.row .one 		{ width: 4.3%; }
 	.row .two 		{ width: 13%; }
